--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 				<div class="col-xl-12 col-lg-12">
 					<div class="section-title text-center mb-70">
 						<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Nos services</span>
-						<h4 class="wow fadeInUp" data-wow-delay=".4s">Découvrez nos services de qualités conçus pour vous.</h4>
+						<h4 class="wow fadeInUp" data-wow-delay=".4s">Découvrez nos services de qualités conçus pour
+							vous.</h4>
 					</div>
 					<!-- TESTIMONIALS -->
 					<section class="testimonials">
@@ -162,9 +163,8 @@
 										<!--TESTIMONIAL 1 -->
 										<div class="item">
 											<div class="shadow-effect">
-												<img class="img-responsive"
-													src="assets/img/delivery/auth.jpeg"
-													alt="" height="300" width="200">
+												<img class="img-responsive" src="assets/img/delivery/auth.jpeg" alt=""
+													height="300" width="200">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Plateforme sécurisée
 													</h5>
@@ -179,9 +179,8 @@
 										<!--TESTIMONIAL 2 -->
 										<div class="item">
 											<div class="shadow-effect">
-												<img class="img-responsive"
-													src="assets/img/delivery/it.jpeg"
-													alt="" height="300" width="200">
+												<img class="img-responsive" src="assets/img/delivery/it.jpeg" alt=""
+													height="300" width="200">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Marketing & IT</h5>
 													<p style="text-align: center;">Bénéficiez de l’expertise en service
@@ -195,8 +194,7 @@
 										<div class="item">
 											<div class="shadow-effect">
 												<img class="img-responsive" height="300" width="200"
-													src="assets/img/delivery/storage.jpeg"
-													alt="">
+													src="assets/img/delivery/storage.jpeg" alt="">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Stockage</h5>
 													<p style="text-align: center;">Nous vous offrons la possibilité de
@@ -207,24 +205,25 @@
 										</div>
 										<!--END OF TESTIMONIAL 3 -->
 										<!--TESTIMONIAL 4 -->
-										
+
 										<!--END OF TESTIMONIAL 4 -->
 										<!--TESTIMONIAL 5 -->
 										<div class="item">
 											<div class="shadow-effect">
-												<img class="img-responsive"
-													src="assets/img/delivery/pub.jpeg" height="300" width="200"
-													alt="">
+												<img class="img-responsive" src="assets/img/delivery/pub.jpeg"
+													height="300" width="200" alt="">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Publicités </h5>
-													<p style="text-align: center;">Service de publicité payante sur nos bannières passantes pour plus de visibilité sur votre produit.</p>
+													<p style="text-align: center;">Service de publicité payante sur nos
+														bannières passantes pour plus de visibilité sur votre produit.
+													</p>
 												</div>
 											</div>
 										</div>
 										<div class="item">
 											<div class="shadow-effect">
-												<img class="img-responsive"  height="300" width="200" src="assets/img/delivery/3333449.jpg"
-													alt="">
+												<img class="img-responsive" height="300" width="200"
+													src="assets/img/delivery/3333449.jpg" alt="">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Livraison sécurisée </h5>
 													<p style="text-align: center;">Nous nous occupons de la livraisons
@@ -363,20 +362,9 @@
 					<!-- <div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
 						<img src="assets/img/delivery/3333449.jpg" alt="">
 					</div> -->
-					<div class="slideshow-container">
-						<div class="mySlides fade delivery-img">
-							<img src="assets/img/delivery/IMG_6397.JPG" height="500" width="500">
-						</div>
-
-						<div class="mySlides fade delivery-img">
-							<img src="assets/img/delivery/IMG_6438.JPG" height="500" width="500">
-						</div>
-					</div>
-					<br>
-					<div style="text-align:center">
-						<span class="dot"></span>
-						<span class="dot"></span>
-						<span class="dot"></span>
+					<div id="owl-demo" class="owl-carousel owl-theme">
+						<div class="item delivery-img mySlides"><img src="assets/img/delivery/IMG_6397.JPG" ></div>
+						<div class="item delivery-img mySlides"><img src="assets/img/delivery/IMG_6438.JPG"></div>
 					</div>
 				</div>
 			</div>
@@ -390,7 +378,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-6">
 					<div class="about-img received-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/received/IMG_6363.JPG" alt="">
+						<img src="assets/img/received/IMG_6363.JPG" style="border-radius: 30px;" alt="">
 					</div>
 				</div>
 				<div class="col-lg-6">
@@ -487,7 +475,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/IMG_6457.jpg" alt="">
+						<img src="assets/img/delivery/IMG_6457.JPG" style="border-radius: 30px;" alt="">
 					</div>
 				</div>
 			</div>
@@ -596,7 +584,8 @@
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
 								vendeur</span>
 							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez-nous et rejoignez la famille
-							 <span style="color: #19CEEB;">BlUE</span> pour plus de détails sur nos offres. Nous nous ferions un plaisir de vous répondre
+								<span style="color: #19CEEB;">BlUE</span> pour plus de détails sur nos offres. Nous nous
+								ferions un plaisir de vous répondre
 								dans les plus bref délais.😊
 							</h5>
 							<form method="POST">
@@ -612,12 +601,12 @@
 								</div>
 								<div class="form-group">
 									<label for="lname">Nom de l'entreprise</label>
-									<input type="text" id="lname" name="lastname" class="form-control"
+									<input type="text" id="enterprise" name="enterprise" class="form-control"
 										placeholder="Ex: Apple" required>
 								</div>
 								<div class="form-group">
 									<label for="lname">Numero de Telephone</label>
-									<input type="email" id="lname" name="lastname" class="form-control"
+									<input type="email" id="telephone" name="telephone" class="form-control"
 										placeholder="Ex: +22967XXXXXX" required>
 								</div>
 								<div class="form-group">
