--- a/index.html
+++ b/index.html
@@ -240,46 +240,7 @@
 					</section>
 				</div>
 			</div>
-			<div class="row">
-
-				<!--div class="col-lg-4 col-md-6">
-					<div class="single-service wow fadeInUp" data-wow-delay=".6s">
-						<div class="icon">
-							<img src="assets/img/service/service-icon-3.svg" alt="">
-						</div>
-						<div class="content">
-							<h3>Furniture</h3>
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-								invidunt.</p>
-						</div>
-					</div>
-				</div-->
-
-				<!--div class="col-lg-4 col-md-6">
-					<div class="single-service wow fadeInUp" data-wow-delay=".4s">
-						<div class="icon">
-							<img src="assets/img/service/service-icon-5.svg" alt="">
-						</div>
-						<div class="content">
-							<h3>Electronics</h3>
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-								invidunt.</p>
-						</div>
-					</div>
-				</div-->
-				<!--div class="col-lg-4 col-md-6">
-					<div class="single-service wow fadeInUp" data-wow-delay=".6s">
-						<div class="icon">
-							<img src="assets/img/service/service-icon-6.svg" alt="">
-						</div>
-						<div class="content">
-							<h3>Clothes</h3>
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-								invidunt.</p>
-						</div>
-					</div>
-				</div-->
-			</div>
+		</div>
 	</section>
 	<!--section id="about" class="about-section pt-150">
 		<div class="container">
@@ -359,12 +320,11 @@
 					</div>
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
-					<!-- <div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/3333449.jpg" alt="">
-					</div> -->
 					<div id="owl-demo" class="owl-carousel owl-theme">
-						<div class="item delivery-img mySlides"><img src="assets/img/delivery/IMG_6397.JPG" ></div>
-						<div class="item delivery-img mySlides"><img src="assets/img/delivery/IMG_6438.JPG"></div>
+						<div class="item delivery-img"><img src="assets/img/delivery/IMG_6397.JPG"
+								></div>
+						<div class="item delivery-img "><img src="assets/img/delivery/IMG_6438.JPG"
+								></div>
 					</div>
 				</div>
 			</div>
