--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="services" class="service-section pt-150">
+	<section id="services" class="service-section pt-150" style="height: 750px;">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-xl-12 col-lg-12">
@@ -155,143 +155,86 @@
 							vous.</h4>
 					</div>
 					<!-- TESTIMONIALS -->
-					<section class="testimonials">
-						<div class="container">
-							<div class="">
-								<div class="">
-									<div id="customers-testimonials" class="owl-carousel">
-										<!--TESTIMONIAL 1 -->
-										<div class="item">
-											<div class="shadow-effect">
-												<img class="img-responsive" src="assets/img/delivery/auth.jpeg" alt=""
-													height="300" width="200">
-												<div class="item-details">
-													<h5 style="text-align: center;color:white">Plateforme sécurisée
-													</h5>
-													<p style="text-align: center;">Nous vous offrons une plateforme
-														rapide, efficace et sécurisée
-														où vous pouvez développer votre activité grâce à une série
-														d'outils conçus pour vous.</p>
-												</div>
-											</div>
-										</div>
-										<!--END OF TESTIMONIAL 1 -->
-										<!--TESTIMONIAL 2 -->
-										<div class="item">
-											<div class="shadow-effect">
-												<img class="img-responsive" src="assets/img/delivery/it.jpeg" alt=""
-													height="300" width="200">
-												<div class="item-details">
-													<h5 style="text-align: center;color:white">Marketing & IT</h5>
-													<p style="text-align: center;">Bénéficiez de l’expertise en service
-														IT et en Marketing de notre équipe qui vous
-														accompagnera tout au long de votre partenariat avec nous.</p>
-												</div>
-											</div>
-										</div>
-										<!--END OF TESTIMONIAL 2 -->
-										<!--TESTIMONIAL 3 -->
-										<div class="item">
-											<div class="shadow-effect">
-												<img class="img-responsive" height="300" width="200"
-													src="assets/img/delivery/storage.jpeg" alt="">
-												<div class="item-details">
-													<h5 style="text-align: center;color:white">Stockage</h5>
-													<p style="text-align: center;">Nous vous offrons la possibilité de
-														stocker vos produits avec nous afin de faciliter la livraison.
-													</p>
-												</div>
-											</div>
-										</div>
-										<!--END OF TESTIMONIAL 3 -->
-										<!--TESTIMONIAL 4 -->
-
-										<!--END OF TESTIMONIAL 4 -->
-										<!--TESTIMONIAL 5 -->
-										<div class="item">
-											<div class="shadow-effect">
-												<img class="img-responsive" src="assets/img/delivery/pub.jpeg"
-													height="300" width="200" alt="">
-												<div class="item-details">
-													<h5 style="text-align: center;color:white">Publicités </h5>
-													<p style="text-align: center;">Service de publicité payante sur nos
-														bannières passantes pour plus de visibilité sur votre produit.
-													</p>
-												</div>
-											</div>
-										</div>
-										<div class="item">
-											<div class="shadow-effect">
-												<img class="img-responsive" height="300" width="200"
-													src="assets/img/delivery/3333449.jpg" alt="">
-												<div class="item-details">
-													<h5 style="text-align: center;color:white">Livraison sécurisée </h5>
-													<p style="text-align: center;">Nous nous occupons de la livraisons
-														et votre produit est traité avec sécurité du point de chargement
-														jusqu’à destination finale.</p>
-												</div>
-											</div>
-										</div>
-										<!--END OF TESTIMONIAL 5 -->
-									</div>
+					<div id="customers-testimonials" class="owl-carousel">
+						<!--TESTIMONIAL 1 -->
+						<div class="item">
+							<div class="shadow-effect">
+								<img class="img-responsive" src="assets/img/delivery/auth.jpeg" alt="" height="300"
+									width="200">
+								<div class="item-details">
+									<h5 style="text-align: center;color:white">Plateforme sécurisée
+									</h5>
+									<p style="text-align: center;">Nous vous offrons une plateforme
+										rapide, efficace et sécurisée
+										où vous pouvez développer votre activité grâce à une série
+										d'outils conçus pour vous.</p>
 								</div>
 							</div>
 						</div>
-					</section>
+						<!--END OF TESTIMONIAL 1 -->
+						<!--TESTIMONIAL 2 -->
+						<div class="item">
+							<div class="shadow-effect">
+								<img class="img-responsive" src="assets/img/delivery/it.jpeg" alt="" height="300"
+									width="200">
+								<div class="item-details">
+									<h5 style="text-align: center;color:white">Marketing & IT</h5>
+									<p style="text-align: center;">Bénéficiez de l’expertise en service
+										IT et en Marketing de notre équipe qui vous
+										accompagnera tout au long de votre partenariat avec nous.</p>
+								</div>
+							</div>
+						</div>
+						<!--END OF TESTIMONIAL 2 -->
+						<!--TESTIMONIAL 3 -->
+						<div class="item">
+							<div class="shadow-effect">
+								<img class="img-responsive" height="300" width="200"
+									src="assets/img/delivery/storage.jpeg" alt="">
+								<div class="item-details">
+									<h5 style="text-align: center;color:white">Stockage</h5>
+									<p style="text-align: center;">Nous vous offrons la possibilité de
+										stocker vos produits avec nous afin de faciliter la livraison.
+									</p>
+								</div>
+							</div>
+						</div>
+						<!--END OF TESTIMONIAL 3 -->
+						<!--TESTIMONIAL 4 -->
+
+						<!--END OF TESTIMONIAL 4 -->
+						<!--TESTIMONIAL 5 -->
+						<div class="item">
+							<div class="shadow-effect">
+								<img class="img-responsive" src="assets/img/delivery/pub.jpeg" height="300" width="200"
+									alt="">
+								<div class="item-details">
+									<h5 style="text-align: center;color:white">Publicités </h5>
+									<p style="text-align: center;">Service de publicité payante sur nos
+										bannières passantes pour plus de visibilité sur votre produit.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="shadow-effect">
+								<img class="img-responsive" height="300" width="200"
+									src="assets/img/delivery/3333449.jpg" alt="">
+								<div class="item-details">
+									<h5 style="text-align: center;color:white">Livraison sécurisée </h5>
+									<p style="text-align: center;">Nous nous occupons de la livraisons
+										et votre produit est traité avec sécurité du point de chargement
+										jusqu’à destination finale.</p>
+								</div>
+							</div>
+						</div>
+						<!--END OF TESTIMONIAL 5 -->
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!--section id="about" class="about-section pt-150">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="about-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/about/about2.png" alt="">
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="about-content">
-						<div class="section-title">
-							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Ce que BlueSide fait
-								pour vous !</span>
-							<h1 class="wow fadeInUp" data-wow-delay=".4s">On-time Delivery and Customer Satisfaction
-							</h1>
-							<p class="wow fadeInUp" data-wow-delay=".6s">Lorem ipsum dolor sit amet, consetetur
-								sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-								aliquyam erat, sed diam voluptua.</p>
-						</div>
-						<div class="rating-meta d-flex align-items-center wow fadeInUp" data-wow-delay=".65s">
-							<h5>Rating 4.8</h5>
-							<div class="rating">
-								<i class="lni lni-star-filled"></i>
-								<i class="lni lni-star-filled"></i>
-								<i class="lni lni-star-filled"></i>
-								<i class="lni lni-star-filled"></i>
-								<i class="lni lni-star-filled"></i>
-							</div>
-						</div>
-
-						<div class="counter-up wow fadeInUp" data-wow-delay=".8s" style="background-color: #19CEEB;">
-							<div class="single-counter">
-								<h3 id="secondo1" class="countup" cup-end="1" cup-append="M+">1 </h3>
-								<h5>Download</h5>
-							</div>
-							<div class="single-counter position-relative">
-								<h3 id="secondo2" class="countup" cup-end="234" cup-append="K+">234 </h3>
-								<h5>Happy User</h5>
-							</div>
-							<div class="single-counter">
-								<h3 id="secondo3" class="countup" cup-end="34" cup-append="K+">34 </h3>
-								<h5>Reviews</h5>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</!--section-->
-	<section id="how" class="delivery-section pt-150">
+	<section id="how" class="delivery-section pt-150" >
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-5">
@@ -321,10 +264,8 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div id="owl-demo" class="owl-carousel owl-theme">
-						<div class="item delivery-img"><img src="assets/img/delivery/IMG_6397.JPG"
-								></div>
-						<div class="item delivery-img "><img src="assets/img/delivery/IMG_6438.JPG"
-								></div>
+						<div class="item delivery-img"><img src="assets/img/delivery/IMG_6397.JPG"></div>
+						<div class="item delivery-img "><img src="assets/img/delivery/IMG_6438.JPG"></div>
 					</div>
 				</div>
 			</div>
@@ -435,7 +376,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/IMG_6457.jpg" style="border-radius: 30px;" alt="">
+						<img src="assets/img/delivery/IMG_6457.JPG" style="border-radius: 30px;" alt="">
 					</div>
 				</div>
 			</div>
