--- a/index.html
+++ b/index.html
@@ -317,8 +317,9 @@
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Comment ca marche
 								?</span>
 							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">
-								<p><span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Inscription
-									</span></p>
+								<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Inscription
+									</span>
+									<br>
 								Inscrivez-vous gratuitement et créez votre compte vendeur, cela ne prend que quelques
 								minutes. Le compte vous donne accès aux différentes fonctionnalités de votre espace
 								gestionnaire.
@@ -345,29 +346,25 @@
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s"
 										style="color:#19CEEB;">Notification</span>
-									<p>
 										Vous serez notifié à chaque commande sur votre compte vendeur ou par mail
-									</p>
 								</ul>
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s"
 										style="color:#19CEEB;">Livraison</span>
-									<p>
 										Nous nous occupons de l’emballage et de la livraison vers le client
-									</p>
 								</ul>
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mode de
-										Paiement </span>
-									<p>
+										Paiement 
+									</span>
 										Recevez votre capitale chaque semaine ou chaque mois simplement en demandant un
 										versement par le biais de votre compte vendeur sur votre compte mobile money ou
 										par transfert bancaire
 								</ul>
 								<ul class="">
-									<p><a href="#contact" class="main-btn btn-hover wow fadeInUp" type="button"
+									<br><a href="#contact" class="main-btn btn-hover wow fadeInUp" type="button"
 											data-wow-delay=".8s" style="background-color:#19CEEB;">Devenir partenaire
-										</a></p>
+										</a>
 								</ul>
 							</p>
 
