--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 	<!-- ========================= hero-section start ========================= -->
 
-	<section id="home" class="hero-section">
+	<section id="home" class="hero-section" style="height: 500px;">
 		<div class="hero-shape">
 			<img src="assets/img/hero/hero-shape.svg" alt="" class="shape">
 		</div>
@@ -137,11 +137,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-6">
+				<!--div class="col-lg-6">
 					<div class="hero-img wow fadeInUp" data-wow-delay=".5s">
 						<img src="assets/img/hero/Add to Cart-pana.png" alt="">
 					</div>
-				</div>
+				</div-->
 			</div>
 		</div>
 	</section>
