--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <![endif]-->
 
 	<!-- ========================= preloader start ========================= -->
-	<!--div class="preloader">
+	<div class="preloader">
 		<div class="loader">
 			<div class="ytp-spinner">
 				<div class="ytp-spinner-container">
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 		</div>
-	</div-->
+	</div>
 	<!-- preloader end -->
 
 
