--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<span style="color: #19CEEB;"> BlueSide</span> </h3>
 						</p>
 						<p class="wow fadeInUp" data-wow-delay=".4s">
-							BlueSide Corp est une entreprise de e-commerce immatriculé au registre du commerce sous le
+							BlueSide Corp est une entreprise de e-commerce immatriculée au registre du commerce sous le
 							<strong>N°: RCCM RB/COT/21A 69268</strong>. La société offre sa plateforme e-commerce <span
 								style="color: #19CEEB;">BlueSide</span> à tous
 							commerçants désireux de vendre leurs produits en ligne et se faire plus de bénéfice.
@@ -222,7 +222,7 @@
 									src="assets/img/delivery/3333449.jpg" alt="">
 								<div class="item-details">
 									<h5 style="text-align: center;color:white">Livraison sécurisée </h5>
-									<p style="text-align: center;">Nous nous occupons de la livraisons
+									<p style="text-align: center;">Nous nous occupons de la livraison
 										et votre produit est traité avec sécurité du point de chargement
 										jusqu’à destination finale.</p>
 								</div>
