--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/IMG_6457.JPG" style="border-radius: 30px;" alt="">
+						<img src="assets/img/delivery/IMG_6457.jpg" style="border-radius: 30px;" alt="">
 					</div>
 				</div>
 			</div>
