--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 									<li class="list-group-item">Nous vous aidons à vendre vos produits plus rapidement
 										grâce à la forte visibilité sur notre site.</li>
 									<li class="list-group-item">Premier site de e-commerce au Bénin qui vous garantit
-										des services de qualité.</li>
+										des services de qualités.</li>
 									<li class="list-group-item">Ayez accès à votre propre compte vendeur avec la
 										possibilité de personnaliser gratuitement votre catalogue de produits en ligne.
 									</li>
@@ -351,7 +351,7 @@
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s"
 										style="color:#19CEEB;">Livraison</span>
-										Nous nous occupons de l’emballage et de la livraison vers le client
+										Nous nous occupons de l’emballage des produits et de la livraison vers le client
 								</ul>
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mode de
@@ -411,7 +411,7 @@
 				<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
 					<div class="member">
 						<div class="member-img">
-							<img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+							<img src="assets/img/team/team-2.jpg" class="img-fluid" style=""  alt="">
 							<div class="social">
 								<a href="https://twitter.com/FambiDiel" target="_blank"><i
 										class="bi bi-twitter"></i></a>
@@ -582,7 +582,7 @@
 
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-widget wow fadeInUp" data-wow-delay=".6s">
-						<h3>Nous suivres</h3>
+						<h3>Nous suivre</h3>
 						<div class="social-wrapper">
 							<ul class="links">
 								<li>
