--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 										class="bi bi-facebook"></i></a>
 								<a href="https://www.instagram.com/geo_szn/" target="_blank"><i
 										class="bi bi-instagram"></i></a>
-								<a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+								<a href="https://www.linkedin.com/in/geoffroy-saizonou-112818214/" target="_blank"><i class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -435,9 +435,9 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href="" target="_blank"><i class="bi bi-twitter"></i></a>
-								<a href="" target="_blank"><i class="bi bi-facebook"></i></a>
-								<a href="" target="_blank"><i class="bi bi-instagram"></i></a>
+								<a href="https://twitter.com/Farid_abdel" target="_blank"><i class="bi bi-twitter"></i></a>
+								<a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+								<a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
 								<a href="https://www.linkedin.com/in/farid-abdel-adediran-yessoufou/" target="_blank"><i
 										class="bi bi-linkedin"></i></a>
 							</div>
@@ -453,10 +453,10 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href="" target="_blank"><i class="bi bi-twitter"></i></a>
-								<a href="" target="_blank"><i class="bi bi-facebook"></i></a>
-								<a href="" target="_blank"><i class="bi bi-instagram"></i></a>
-								<a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+								<a href="https://twitter.com/KouraBk" target="_blank"><i class="bi bi-twitter"></i></a>
+								<a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+								<a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+								<a href="https://www.linkedin.com/in/shukurath-bakary-8806161b5/" target="_blank"><i class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
