--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									</li>
 									<li class="nav-item">
 										<a class="page-scroll" href="#contact" style="text-align : center">Devenir
-											Vendeur</a>
+											Vendeur/Partenaire</a>
 									</li>
 								</ul>
 							</div>
@@ -109,7 +109,7 @@
 
 	<!-- ========================= hero-section start ========================= -->
 
-	<section id="home" class="hero-section" >
+	<section id="home" class="hero-section">
 		<div class="hero-shape">
 			<img src="assets/img/hero/hero-shape.svg" alt="" class="shape">
 		</div>
@@ -234,7 +234,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="how" class="delivery-section pt-150" >
+	<section id="how" class="delivery-section pt-150">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-5">
@@ -318,8 +318,8 @@
 								?</span>
 							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">
 								<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Inscription
-									</span>
-									<br>
+								</span>
+								<br>
 								Inscrivez-vous gratuitement et créez votre compte vendeur, cela ne prend que quelques
 								minutes. Le compte vous donne accès aux différentes fonctionnalités de votre espace
 								gestionnaire.
@@ -346,25 +346,25 @@
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s"
 										style="color:#19CEEB;">Notification</span>
-										Vous serez notifié à chaque commande sur votre compte vendeur ou par mail
+									Vous serez notifié à chaque commande sur votre compte vendeur ou par mail
 								</ul>
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s"
 										style="color:#19CEEB;">Livraison</span>
-										Nous nous occupons de l’emballage des produits et de la livraison vers le client
+									Nous nous occupons de l’emballage des produits et de la livraison vers le client
 								</ul>
 								<ul class="list-group list-group-flush">
 									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mode de
-										Paiement 
+										Paiement
 									</span>
-										Recevez votre capitale chaque semaine ou chaque mois simplement en demandant un
-										versement par le biais de votre compte vendeur sur votre compte mobile money ou
-										par transfert bancaire
+									Recevez votre capitale chaque semaine ou chaque mois simplement en demandant un
+									versement par le biais de votre compte vendeur sur votre compte mobile money ou
+									par transfert bancaire
 								</ul>
 								<ul class="">
 									<br><a href="#contact" class="main-btn btn-hover wow fadeInUp" type="button"
-											data-wow-delay=".8s" style="background-color:#19CEEB;">Devenir partenaire
-										</a>
+										data-wow-delay=".8s" style="background-color:#19CEEB;">Devenir partenaire
+									</a>
 								</ul>
 							</p>
 
@@ -398,7 +398,8 @@
 										class="bi bi-facebook"></i></a>
 								<a href="https://www.instagram.com/geo_szn/" target="_blank"><i
 										class="bi bi-instagram"></i></a>
-								<a href="https://www.linkedin.com/in/geoffroy-saizonou-112818214/" target="_blank"><i class="bi bi-linkedin"></i></a>
+								<a href="https://www.linkedin.com/in/geoffroy-saizonou-112818214/" target="_blank"><i
+										class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -411,7 +412,7 @@
 				<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
 					<div class="member">
 						<div class="member-img">
-							<img src="assets/img/team/team-2.jpg" class="img-fluid" style=""  alt="">
+							<img src="assets/img/team/team-2.jpg" class="img-fluid" style="" alt="">
 							<div class="social">
 								<a href="https://twitter.com/FambiDiel" target="_blank"><i
 										class="bi bi-twitter"></i></a>
@@ -435,7 +436,8 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href="https://twitter.com/Farid_abdel" target="_blank"><i class="bi bi-twitter"></i></a>
+								<a href="https://twitter.com/Farid_abdel" target="_blank"><i
+										class="bi bi-twitter"></i></a>
 								<a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
 								<a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
 								<a href="https://www.linkedin.com/in/farid-abdel-adediran-yessoufou/" target="_blank"><i
@@ -456,7 +458,8 @@
 								<a href="https://twitter.com/KouraBk" target="_blank"><i class="bi bi-twitter"></i></a>
 								<a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
 								<a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
-								<a href="https://www.linkedin.com/in/shukurath-bakary-8806161b5/" target="_blank"><i class="bi bi-linkedin"></i></a>
+								<a href="https://www.linkedin.com/in/shukurath-bakary-8806161b5/" target="_blank"><i
+										class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -480,7 +483,7 @@
 					<div class="about-content received-content">
 						<div class="section-title">
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
-								vendeur</span>
+								Vendeur/Partenaire</span>
 							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez-nous et rejoignez la famille
 								<span style="color: #19CEEB;">BlUE</span> pour plus de détails sur nos offres. Nous nous
 								ferions un plaisir de vous répondre
@@ -498,9 +501,17 @@
 										placeholder="Ex: example@gmail.com" required>
 								</div>
 								<div class="form-group">
+									<label for="lname">Type </label>
+									<select name="enterprise" class="form-select" required>
+										<option value="">---Votre choix ----</option>
+										<option value="">Vendeur</option>
+										<option value="">Partenaire</option>
+									</select>
+								</div>
+								<div class="form-group">
 									<label for="lname">Nom de l'entreprise</label>
 									<input type="text" id="enterprise" name="enterprise" class="form-control"
-										placeholder="Ex: Apple" required>
+										placeholder="Ex: Apple">
 								</div>
 								<div class="form-group">
 									<label for="lname">Numero de Telephone</label>
@@ -557,7 +568,7 @@
 								<a href="#team">Equipe</a>
 							</li>
 							<li>
-								<a href="#contact">Devenir vendeur</a>
+								<a href="#contact">Devenir Vendeur/Partenaire</a>
 							</li>
 						</ul>
 					</div>
