--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="x-ua-compatible" content="ie=edge" />
-	<title>BlueSide - Ecommerce</title>
+	<title>BlueSide - Vendre sur internet au Benin, créer votre boutique en ligne et nous nous occupons de la livraison</title>
+	<meta name="description" content="Créez votre boutique en ligne d&#039;e-commerce grâce à BlueSide et gagnez de l&#039;argent. Découvrez comment vendre sur internet au Benin, Blueside s&#039;occupe de la livraison ! " />
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="keywords" content="Vendre en ligne " />
+
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
 	<!-- Place favicon.ico in the root directory -->
 
