--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="keywords" content="Vendre en ligne " />
-
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
 	<!-- Place favicon.ico in the root directory -->
-
 	<!-- ========================= CSS here ========================= -->
 	<link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-2.min.css" />
-
 	<!--   ========================Vendor icons ===========================-->
 	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +24,6 @@
 	<link href="assets/css/fontawesome-all.css" rel="stylesheet">
 	<!--====== Default CSS ======-->
 	<link rel="stylesheet" href="assets/css/default.css">
-
 	<!--====== Style CSS ======-->
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -93,7 +89,7 @@
 									</li>
 									<li class="nav-item">
 										<a class="page-scroll" href="#contact" style="text-align : center">Devenir
-											Vendeur/Partenaire</a>
+											Vendeur/Sponsor</a>
 									</li>
 								</ul>
 							</div>
@@ -486,7 +482,7 @@
 					<div class="about-content received-content">
 						<div class="section-title">
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
-								Vendeur/Partenaire</span>
+								Vendeur/Sponsor</span>
 							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez-nous et rejoignez la famille
 								<span style="color: #19CEEB;">BlUE</span> pour plus de détails sur nos offres. Nous nous
 								ferions un plaisir de vous répondre
@@ -506,9 +502,9 @@
 								<div class="form-group">
 									<label for="lname">Type </label>
 									<select name="enterprise" class="form-select" required>
-										<option value="">---Votre choix ----</option>
+										<option value="">---Votre choix---</option>
 										<option value="">Vendeur</option>
-										<option value="">Partenaire</option>
+										<option value="">Sponsor</option>
 									</select>
 								</div>
 								<div class="form-group">
@@ -571,7 +567,7 @@
 								<a href="#team">Equipe</a>
 							</li>
 							<li>
-								<a href="#contact">Devenir Vendeur/Partenaire</a>
+								<a href="#contact">Devenir Vendeur/Sponsor</a>
 							</li>
 						</ul>
 					</div>
